[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/nodes/TileInRuleset.gd" type="Script" id=1]
[ext_resource path="res://src/nodes/TileCompositionPreview.gd" type="Script" id=2]
[ext_resource path="res://src/nodes/TileRotationsPreview.gd" type="Script" id=3]
[ext_resource path="res://src/nodes/TileFlipsPreview.gd" type="Script" id=4]

[node name="TileInRuleset" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -620.0
rect_min_size = Vector2( 0, 48 )
custom_constants/separation = 8
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TilesMasks" type="HBoxContainer" parent="."]
margin_right = 1280.0
margin_bottom = 32.0

[node name="Label" type="Label" parent="TilesMasks"]
margin_top = 9.0
margin_right = 85.0
margin_bottom = 23.0
text = "Neighbours:  "
align = 1

[node name="ScrollContainer" type="ScrollContainer" parent="TilesMasks"]
margin_left = 89.0
margin_right = 1280.0
margin_bottom = 32.0
rect_min_size = Vector2( 0, 32 )
size_flags_horizontal = 3
scroll_vertical_enabled = false

[node name="HBoxContainer" type="HBoxContainer" parent="TilesMasks/ScrollContainer"]
margin_right = 1191.0
size_flags_horizontal = 3
custom_constants/separation = 8

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_top = 40.0
margin_right = 1280.0
margin_bottom = 54.0

[node name="Parts" type="HBoxContainer" parent="HBoxContainer"]
margin_right = 424.0
margin_bottom = 14.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="HBoxContainer/Parts"]
margin_right = 85.0
margin_bottom = 14.0
text = "Composition:"
align = 2

[node name="TileCompositionPreview" type="Control" parent="HBoxContainer/Parts"]
margin_left = 89.0
margin_right = 424.0
margin_bottom = 14.0
size_flags_horizontal = 3
script = ExtResource( 2 )

[node name="Rotations" type="HBoxContainer" parent="HBoxContainer"]
margin_left = 428.0
margin_right = 852.0
margin_bottom = 14.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="HBoxContainer/Rotations"]
margin_right = 68.0
margin_bottom = 14.0
text = "Rotations: "
align = 2

[node name="TileRotationsPreview" type="Control" parent="HBoxContainer/Rotations"]
margin_left = 72.0
margin_right = 424.0
margin_bottom = 14.0
size_flags_horizontal = 3
script = ExtResource( 3 )

[node name="Flips" type="HBoxContainer" parent="HBoxContainer"]
margin_left = 856.0
margin_right = 1280.0
margin_bottom = 14.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="HBoxContainer/Flips"]
margin_right = 38.0
margin_bottom = 14.0
text = "Flips: "
align = 2

[node name="TileFlipsPreview" type="Control" parent="HBoxContainer/Flips"]
margin_left = 42.0
margin_right = 424.0
margin_bottom = 14.0
size_flags_horizontal = 3
script = ExtResource( 4 )
